Revert "Fix for defect #74"
This reverts commit cfef061398c874e8a5f1cdfc95e0cb04d919ae5d.

--- a/documentationbasic/ocp4devex/src/main/asciidoc/applicationdeploymentstrategies.asciidoc
+++ b/documentationbasic/ocp4devex/src/main/asciidoc/applicationdeploymentstrategies.asciidoc
@@ -305,7 +305,7 @@ The element of the path that we need for the new common hostname is from the .ap
 [source]
 ----
 git clone https://github.com/utherp0/workshop4.git
-cd workshop4/attendee/myholiday
+cd attendee/myholiday
 cat adventure-route.yaml
 ----
 
