--- a/documentationadvanced/ocp4devex/src/main/asciidoc/openshift-do-command-line.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/openshift-do-command-line.asciidoc
@@ -32,7 +32,7 @@ The odo command line interface is built into the terminal that you create as a p
 
 *If you haven't already please follow the instructions in the pre-req chapter which explains the creation and setting up of the terminal application. For this chapter you will be using that application which has the odo command pre-installed for you*
 
-Switch to the terminal application tab of the browser as dsecribed in the pre-req chapter
+Switch to the terminal application tab of the browser as described in the pre-req chapter
 
 *To use the command simply type 'odo' and you will see help regarding the objects and to get help on a specific object use 'odo <object> --help'.*
 
