spotted a few typos

--- a/documentationadvanced/ocp4devex/src/main/asciidoc/openshift-do-command-line.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/openshift-do-command-line.asciidoc
@@ -158,7 +158,7 @@ Wait for the response "Changes successfully pushed to component"
 
 The application has started up and will be running at the URL indicated in the output above. Copy the URL from your command window and paste it into a new browser tab. You should see an output similar to that shown below.
 
-Note - within the terminal window to copy text you should highlight the text, right click and select copy. To past to the terminal window use ctrl-shift-v.
+Note - within the terminal window to copy text you should highlight the text, right click and select copy. To paste to the terminal window use ctrl-shift-v.
 
 [source]
 ----
@@ -212,11 +212,11 @@ Pushing files...
  ✓  Building component [4s]
 ----
 
-Refresh the browser widow showing the application output and you will see your code change
+Refresh the browser window showing the application output and you will see your code change
 
 odo is clearly a very fast way to go from code to running your application without having to install tools and frameworks on your laptop
 
-Finally, lets clean up the project by typing
+Finally, let's clean up the project by typing
 
 [source]
 ----
