Renaming of courses in advance of new version

--- a/documentationadvanced/ocp4devex/src/main/asciidoc/camelkocpserverlesseventing.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/camelkocpserverlesseventing.asciidoc
@@ -1,4 +1,4 @@
-== Camel K and OpenShift Serverless Eventing
+== Camel K and OpenShift Serverless Eventing [INNOVATION]
 
 Author: Phil Prosser (feedback to pprosser@redhat.com)
 
