--- a/documentationadvanced/ocp4devex/src/main/asciidoc/openshift-pipelines-tekton.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/openshift-pipelines-tekton.asciidoc
@@ -1,4 +1,4 @@
-== OpenShift Pipelines - Tekton
+== OpenShift Pipelines - Tekton [INNOVATION]
 
 Author: Mark Roberts (feedback to mroberts@redhat.com)
 
