--- a/documentationbasic/ocp4devex/src/main/asciidoc/healthprobes.asciidoc
+++ b/documentationbasic/ocp4devex/src/main/asciidoc/healthprobes.asciidoc
@@ -1,6 +1,6 @@
 [[healthprobes]]
 
-== Pod Health Probes
+== Pod Health Probes [ESSENTIALS]
 
 Author: Mark Roberts (feedback to mroberts@redhat.com)
 
