--- a/documentationadvanced/ocp4devex/src/main/asciidoc/openshift-and-quay-repository.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/openshift-and-quay-repository.asciidoc
@@ -1,5 +1,5 @@
 :hide-uri-scheme:
-== OpenShift and the Quay Image Repository
+== OpenShift and the Quay Image Repository [INNOVATION]
 
 Author: Mark Roberts (feedback to mroberts@redhat.com)
 
