--- a/documentationadvanced/ocp4devex/src/main/asciidoc/service-mesh.asciidoc
+++ b/documentationadvanced/ocp4devex/src/main/asciidoc/service-mesh.asciidoc
@@ -1,5 +1,5 @@
 :hide-uri-scheme:
-== OpenShift Service Mesh
+== OpenShift Service Mesh [INNOVATION]
 
 Author: Mark Roberts (feedback to mroberts@redhat.com)
 
