--- a/documentationbasic/ocp4devex/src/main/asciidoc/applicationdeploymentstrategies.asciidoc
+++ b/documentationbasic/ocp4devex/src/main/asciidoc/applicationdeploymentstrategies.asciidoc
@@ -1,4 +1,4 @@
-== Application Deployment Configurations and DevOps Approaches
+== Application Deployment Configurations and DevOps Approaches [ESSENTIALS]
 
 Author: Mark Roberts (feedback to mroberts@redhat.com)
 
