--- a/documentationbasic/ocp4devex/src/main/asciidoc/deployments.asciidoc
+++ b/documentationbasic/ocp4devex/src/main/asciidoc/deployments.asciidoc
@@ -1,4 +1,4 @@
-== Understanding Deployments and Configuration
+== Understanding Deployments and Configuration [ESSENTIALS]
 
 Author: Ian Lawson (feedback to ian.lawson@redhat.com)
 
