First drop (unfinished) of intro to oc

--- a/documentationbasic/ocp4devex/src/main/asciidoc/index.asciidoc
+++ b/documentationbasic/ocp4devex/src/main/asciidoc/index.asciidoc
@@ -3,6 +3,7 @@
 
 include::intro.asciidoc[]
 include::prereq.asciidoc[]
+include::introductiontooc.asciidoc[]
 include::applicationbasics.asciidoc[]
 include::deployments.asciidoc[]
 include::applicationdeploymentstrategies.asciidoc[]
